--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -1,7 +1,3 @@
-body{
-    background-color: blue;
-}
-
 .main-container{
     display: flex;
     gap: 5rem;
@@ -18,14 +14,14 @@ body{
     margin-left: 5%;
 }
 
-.container {
+.container2 {
     position: relative;
     display: block;
     left: 80px;
     top: 20px;
    }
 
-.container::before{
+.container2::before{
     content: ""; 
     position: absolute;
     width: 10%;
@@ -55,7 +51,7 @@ transform: translate(-50%,-40px);
 
 @media screen and (max-width: 950px) {
     
-    .container {
+    .container2 {
 display: none;
        }
        .first-container{
@@ -93,12 +89,12 @@ img:nth-child(2) {
     color: #453227;
 }
 
-h2{
+.heading2{
     line-height: 1;
     font-size: 3rem;
    }
 
-p{
+.para2{
     font-size: 1.5rem;
     line-height: 2;
     max-width: 45em;
