--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -32,7 +32,7 @@
     border-radius:0.5rem;
    } 
 
-img:nth-child(1) {
+   .myImg:nth-child(1) {
     position: absolute;
     bottom: 0px;
     left: 0px;
@@ -44,7 +44,7 @@ img:nth-child(1) {
 
 @media screen and (max-width: 1030px) {
     
-img:nth-child(1) {
+.myImg:nth-child(1) {
 transform: translate(-50%,-40px);
    }
 }
@@ -58,7 +58,7 @@ display: none;
         width: 100%;
        }
     }
-img:nth-child(2) {
+.myImg:nth-child(2) {
     width: 100%;
     height: 550px;
     position: relative;
