make all filter dynamic based data and add media query

--- a/frontend/src/Products.module.css
+++ b/frontend/src/Products.module.css
@@ -110,3 +110,13 @@ btn.active{
     border-radius: 0.25rem;
     display: block;
 }
+
+.notFound{
+    font-size: 1.8rem;
+    text-transform: none;
+}
+
+@media screen and (max-width: 950px) {
+    .productsContainer{
+    grid-template-columns: repeat(2, 1fr);}
+}
