--- a/frontend/src/Products.module.css
+++ b/frontend/src/Products.module.css
@@ -28,6 +28,7 @@
     gap: 2rem 1.5rem;
 }
 
+
 .sidebar{
     position: sticky;
     top: 1rem;
@@ -119,4 +120,86 @@
 @media screen and (max-width: 950px) {
     .productsContainer{
     grid-template-columns: repeat(2, 1fr);}
+}
+
+@media screen and (max-width: 750px) {
+    .productsContainer{
+    grid-template-columns: repeat(1, 1fr);}
+}
+
+@media screen and (max-width: 550px) {
+    .container{
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+.rowProductsContainer{
+    display: grid;
+    row-gap: 3rem;
+}
+
+.showFlex{
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 2rem;
+    align-items: center;
+}
+
+.imgFlex{
+    display: block;
+    width: 300px;
+    height: 220px;
+    object-fit: cover;
+    border-radius: 0.25rem;
+    margin-bottom: 1rem;
+}
+
+.details{
+    display: flex;
+    flex-direction: column;
+}
+
+.nameFlex{
+    margin-bottom: 0.5rem;
+    line-height: 1;
+    font-size: 1.5rem;
+}
+
+.desc{
+    max-width: 45em;
+    margin-bottom: 1rem;
+    color: #324d67;
+}
+
+.detail{
+    width: 6rem;
+    text-align: center;
+
+    font-size: 0.8rem;
+    padding: 0.25rem 0.5rem;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 3px;
+    color: #eaded7;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 400;
+    letter-spacing: 0.1rem;
+    text-transform: uppercase;
+    background: #ab7a5f;
+    border-color: transparent;
+    border-radius:0.25rem;
+    transition: all 0.3s linear;
+}
+
+.detail:hover {
+    background: #c5a491;
+    color: #453227;
+}
+
+@media screen and (max-width: 950px) {
+    .showFlex{
+        display: flex;
+        flex-direction: column;
+        align-items: first baseline;
+    }
 }
