handle select option sort products in Head component

--- a/frontend/src/Header.module.css
+++ b/frontend/src/Header.module.css
@@ -71,4 +71,12 @@
         grid-template-columns: auto auto auto;
         column-gap: 2rem;
     }
+    .label{
+    margin-left: 0.7rem;
+    }
 }
+
+.label{
+    margin-right: 0.8rem;
+    }
+
